// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Basic 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenStack
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSScreen
      collapsable={false}
      gestureResponseDistance={
        {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      nativeBackButtonDismissalEnabled={false}
      onAppear={[Function]}
      onDisappear={[Function]}
      onDismissed={[Function]}
      onGestureCancel={[Function]}
      onHeaderBackButtonClicked={[Function]}
      onNativeDismissCancelled={[Function]}
      onTransitionProgress={[Function]}
      onWillDisappear={[Function]}
      replaceAnimation="push"
      sheetAllowedDetents="large"
      sheetCornerRadius={-1}
      sheetExpandsWhenScrolledToEdge={true}
      sheetGrabberVisible={false}
      sheetLargestUndimmedDetent="all"
      stackPresentation="push"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      swipeDirection="horizontal"
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        style={
          {
            "flex": 1,
            "flexDirection": "column-reverse",
          }
        }
      >
        <View
          collapsable={false}
          style={
            [
              {
                "flex": 1,
              },
              {
                "backgroundColor": "white",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "flex": 1,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 3,
                      "borderWidth": 1,
                      "margin": 12,
                    },
                    {
                      "borderColor": "#0075c2",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "padding": 12,
                      },
                      {
                        "backgroundColor": "#0075c2",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "black",
                        },
                        {
                          "fontSize": 14,
                        },
                        [
                          {
                            "color": "white",
                          },
                          {
                            "fontSize": 14,
                            "fontWeight": "bold",
                          },
                        ],
                      ]
                    }
                  >
                    Card Header Text
                  </Text>
                </View>
                <View>
                  <View
                    style={
                      [
                        {
                          "padding": 12,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      style={
                        [
                          {
                            "color": "black",
                          },
                          {
                            "fontSize": 14,
                          },
                          undefined,
                        ]
                      }
                    >
                      CardBody component to show the content on the card body
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <RNSScreenStackHeaderConfig
        backButtonInCustomView={false}
        backTitle=""
        backTitleVisible={false}
        backgroundColor="#0075c2"
        color="white"
        direction="ltr"
        disableBackButtonMenu={false}
        hidden={false}
        hideBackButton={false}
        largeTitleHideShadow={false}
        title="/"
        titleColor="white"
        topInsetEnabled={false}
        translucent={false}
      />
    </RNSScreen>
  </RNSScreenStack>
</RNCSafeAreaProvider>
`;

exports[`Card SubHeader 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenStack
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSScreen
      collapsable={false}
      gestureResponseDistance={
        {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      nativeBackButtonDismissalEnabled={false}
      onAppear={[Function]}
      onDisappear={[Function]}
      onDismissed={[Function]}
      onGestureCancel={[Function]}
      onHeaderBackButtonClicked={[Function]}
      onNativeDismissCancelled={[Function]}
      onTransitionProgress={[Function]}
      onWillDisappear={[Function]}
      replaceAnimation="push"
      sheetAllowedDetents="large"
      sheetCornerRadius={-1}
      sheetExpandsWhenScrolledToEdge={true}
      sheetGrabberVisible={false}
      sheetLargestUndimmedDetent="all"
      stackPresentation="push"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      swipeDirection="horizontal"
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        style={
          {
            "flex": 1,
            "flexDirection": "column-reverse",
          }
        }
      >
        <View
          collapsable={false}
          style={
            [
              {
                "flex": 1,
              },
              {
                "backgroundColor": "white",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "flex": 1,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 3,
                      "borderWidth": 1,
                      "margin": 12,
                    },
                    {
                      "borderColor": "#0075c2",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "padding": 12,
                      },
                      {
                        "backgroundColor": "#0075c2",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "black",
                        },
                        {
                          "fontSize": 14,
                        },
                        [
                          {
                            "color": "white",
                          },
                          {
                            "fontSize": 14,
                            "fontWeight": "bold",
                          },
                        ],
                      ]
                    }
                  >
                    Card Header Text
                  </Text>
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "black",
                        },
                        {
                          "fontSize": 14,
                        },
                        [
                          {
                            "color": "white",
                          },
                          {
                            "fontSize": 12,
                          },
                        ],
                      ]
                    }
                  >
                    subheader text can be added in the header container
                  </Text>
                </View>
                <View>
                  <View
                    style={
                      [
                        {
                          "padding": 12,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      style={
                        [
                          {
                            "color": "black",
                          },
                          {
                            "fontSize": 14,
                          },
                          undefined,
                        ]
                      }
                    >
                      CardBody component to show the content on the card body
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <RNSScreenStackHeaderConfig
        backButtonInCustomView={false}
        backTitle=""
        backTitleVisible={false}
        backgroundColor="#0075c2"
        color="white"
        direction="ltr"
        disableBackButtonMenu={false}
        hidden={false}
        hideBackButton={false}
        largeTitleHideShadow={false}
        title="/"
        titleColor="white"
        topInsetEnabled={false}
        translucent={false}
      />
    </RNSScreen>
  </RNSScreenStack>
</RNCSafeAreaProvider>
`;
